# saw-monte-carlo

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: main.py
src/saw_monte_carlo/: __init__.py  basic.py  perm.py  pivot.py  rosenbluth.py  utils.py
tests/: __init__.py  test_saw_monte_carlo.py
